[package]
name = "rust-solar-power-data-visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
float_extras = "0.1.6"
elasticsearch = "8.5.0-alpha.1"
serde = "~1"
serde_json = "~1"
tokio = { version = "*", features = ["full"] }
dotenv = "0.15.0"